--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -30,15 +30,15 @@
         margin: 2em auto;
     }
 
-    .aside__imagen{
+    .aside__imagen {
         width: 300px;
     }
 
     /* banner */
-    .banner__grande{
+    .banner__grande {
         width: 100%;
     }
-   
+
 }
 
 /*Small devices (landscape phones, less than 768px)*/
@@ -81,451 +81,6 @@
 
     .aside__iframe--podcast {
         margin: 2em auto;
-    }
-
-}
-
-
-
-/*Small devices (landscape phones, less than 768px)*/
-@media only screen and (max-width: 768px) {
-
-    .contenedor {
-        width: 95vw;
-
-
-        margin: .6em auto;
-        grid-gap: .7em;
-        display: grid;
-
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(12, auto);
-        grid-template-areas:
-            'header    header    header'
-            'nav       nav       nav'
-            'main      main      main'
-            'article   article   article'
-            'divLeft   divLeft   divLeft'
-            'divRight  divRight  divRight'
-            'mision    mision    mision'
-            'aside     aside     aside'
-            'section   section   section'
-            'galeria   galeria   galeria'
-            'form      form      form'
-            'footer    footer    footer';
-    }
-
-
-    .header__titulo {
-        font-size: 15px;
-        letter-spacing: 4px;
-        font-weight: 600;
-        z-index: 9;
-        color: white;
-    }
-
-    /*barra de navegacion*/
-    .navbar__item {
-        display: block;
-        background-color: white;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100%;
-        font-size: 1.8em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        transform: translateY(-80em);
-        transition: all 1.2s ease-in-out;
-
-
-
-
-    }
-
-    .navbar__item--on {
-        transform: translateX(0);
-    }
-
-    .navbar__menu {
-        display: block;
-        color: black;
-        font-size: 1.7em;
-        margin-right: 20px;
-        cursor: pointer;
-    }
-
-    .navbar__link {
-        letter-spacing: 13px;
-        padding: 1em;
-    }
-
-    .navbar__logo {
-        margin-left: 20px;
-    }
-
-
-    /* Main Pricipal */
-    .main__titulo {
-        font-size: 40px;
-    }
-
-    .main__tituloPre {
-        font-size: 20px;
-    }
-
-    .main__tituloSub {
-        font-size: 10px;
-    }
-
-    .main__linea {
-        width: 120px;
-        height: 2px;
-        background-color: var(--color-uno);
-        text-align: center;
-        margin: 15px auto;
-    }
-
-
-
-    /*Precursores (Videos de Youtube*/
-    .aside {
-        height: auto;
-    }
-
-    .aside::before {
-        height: auto;
-    }
-
-
-
-    .aside__texto {
-        width: 100%;
-        height: auto;
-        text-align: center;
-        color: white;
-        font-size: 30px;
-        z-index: 1;
-        margin-top: 50px;
-
-    }
-
-    .aside__titulo {
-        font-size: 40px;
-        font-family: 'Roboto', sans-serif;
-        text-align: center;
-        line-height: 1.2em;
-        margin-top: 10px;
-        letter-spacing: 3px;
-
-    }
-
-    .aside__subtitulo {
-        font-size: 15px;
-        margin-top: 10px;
-        letter-spacing: 5px;
-
-    }
-
-    .aside__iframe {
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        z-index: 1;
-    }
-
-    .aside__iframe iframe {
-        width: 400px;
-        height: 300;
-    }
-
-    /*rehma*/
-
-    .article__card {
-        max-width: 600px;
-        width: 95%;
-        padding: 60px;
-    }
-
-    /*Nosotros*/
-
-    .right__frase {
-        display: none;
-    }
-
-    .left__frase {
-        display: none;
-    }
-
-
-
-    /* estructura de texto y foto */
-
-    .mision {
-        width: 100%;
-        height: auto;
-        grid-area: mision;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-        padding: 1.5em;
-    }
-
-    .mision__texto {
-        width: 100%;
-        padding: 20px 0 20px 0;
-        color: white;
-    }
-
-    .mision__tituloPre {
-        font-size: 22px;
-        font-family: 'Cardo', serif;
-        font-weight: 100;
-        margin-bottom: 8px;
-        text-align: center;
-    }
-
-    .mision__linea {
-        width: 90px;
-        height: 2px;
-        background-color: var(--color-uno);
-
-
-
-    }
-
-    .mision__titulo {
-        font-size: 40px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 900;
-        text-align: center;
-        line-height: 1.2em;
-        margin-top: 10px;
-    }
-
-    .mision__tituloSub {
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 5px;
-        text-align: center;
-        margin-top: 10px;
-    }
-
-    .mision__parrafo {
-        font-size: 12px;
-        margin-top: 25px;
-        line-height: 23px;
-    }
-
-    .mision__imagen {
-        width: 20em;
-    }
-
-
-
-
-    /*iglesia */
-
-    .iglesia {
-        width: 100%;
-    }
-
-    .iglesia__tituloPre {
-        font-size: 20px;
-    }
-
-    .iglesia__titulo {
-        font-size: 40px;
-        line-height: 1.2em;
-    }
-
-    .iglesia__linea {
-        width: 90px;
-        height: 2px;
-        background-color: var(--color-uno);
-        text-align: center;
-        margin: 15px auto;
-    }
-
-    .iglesia__tituloSub {
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 5px;
-    }
-
-    .iglesia__contenedor {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .iglesia__card {
-        grid-template-columns: 300px;
-    }
-
-    .iglesia__cardTitulo {
-        font-size: 20px;
-    }
-
-
-
-
-    /* Modal niños */
-
-
-
-    .popup__card {
-        display: flex;
-        flex-direction: column;
-        height: 80%;
-        max-height: 800px;
-    }
-
-    .popup__img {
-        width: 100%;
-        height: 30%;
-    }
-
-    .popup__text {
-        width: 100%;
-        height: 60%;
-        padding: 35px;
-        text-align: justify;
-    }
-
-    .popup__text h1 {
-        font-size: 25px;
-    }
-
-    .popup__text p {
-        font-size: 12px;
-        line-height: 18px;
-
-    }
-
-    .galeria__titulo {
-        font-size: 50px;
-        padding: .8em 0 .4em;
-    }
-
-    .galeria__picture::before {
-        font-size: 1rem;
-    }
-
-    .galeria__grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-            "img1 img1"
-            "img1 img1"
-            "img2 img3"
-            "img4 img4"
-            "img5 img5"
-            "img5 img5"
-            "img6 img7"
-            "img8 img8"
-            "img8 img8"
-        ;
-        gap: .8em;
-    }
-
-    /*Formulario*/
-    .form__contenedor {
-        width: 80%;
-    }
-
-    .form__textarea {
-        background: rgba(255, 255, 255, 1);
-    }
-
-    /*footer*/
-
-    /*Grupo1*/
-    .footer__grupo1 {
-        padding: 2.5em;
-        grid-template-columns: 1fr;
-    }
-
-    /*Comunidad*/
-    .footer__texto {
-        text-align: center;
-    }
-
-    .footer__correo {
-        display: block;
-    }
-
-    .footer__titulo {
-        font-size: 23px;
-    }
-
-    .footer__parrafo {
-        font-size: 14px;
-        font-weight: 100;
-        text-align: center;
-        line-height: 25px;
-    }
-
-
-
-
-    /*Sobre nosotros*/
-    .footer__texto1 {
-        text-align: center;
-    }
-
-    .footer__reuniones {
-        display: block;
-    }
-
-    .footer__titulo1 {
-        font-size: 23px;
-    }
-
-    .footer__parrafo1 {
-        font-size: 14px;
-        font-weight: 100;
-        line-height: 25px;
-    }
-
-
-    /*Siguenos*/
-    .footer__texto2 {
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .footer__titulo2 {
-        font-size: 23px;
-    }
-
-    .footer__ubicacion {
-        display: block;
-    }
-
-    .footer__social {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-    }
-
-    .footer__social a:hover {
-        transform: scale(1.1);
-    }
-
-    .footer__grupo2 {
-        font-size: 18px;
-        color: white;
     }
 
 }
@@ -1144,6 +699,11 @@
         margin: 4em auto;
     }
 
+    .aside__imagen {
+        width: 250px;
+        flex-wrap: wrap;
+    }
+
 
 
 
@@ -1443,7 +1003,7 @@
     }
 
     /*aside*/
-    .aside__imagen{
+    .aside__imagen {
         width: 250px;
         flex-wrap: wrap;
     }
@@ -1466,6 +1026,21 @@
 
     .galeria__texto {
         margin: 1em auto 1em;
+    }
+
+
+    /* Map */
+    section .map {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 50%;
+        margin: 1em auto;
+        padding: 60px 40px;
+
+
     }
 
     /*footer*/
