--- a/style.css
+++ b/style.css
@@ -1431,8 +1431,8 @@ aside[class=aside] {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  width: 450px;
-  margin: 1em auto;
+  width: 87%;
+  margin: 2em auto;
   background: rgba(0, 0, 0, .4);
   padding: 30px 20px;
   border-radius: 7px;
@@ -1486,6 +1486,20 @@ aside[class=aside] {
   cursor: pointer;
   background-color: var(--color-cinco);
   transition: all .2s ease-in-out;
+}
+
+/* Map */
+section .map{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 50%;
+  margin: 1em auto;
+  padding: 60px 40px;
+ 
+ 
 }
 
 
