--- a/style.css
+++ b/style.css
@@ -1779,8 +1779,8 @@ section .map {
 
   .header__titulo {
     font-size: 12px;
-    letter-spacing: 4px;
-    font-weight: 300;
+    letter-spacing: 0px;
+    font-weight: 600;
     z-index: 9;
     color: white;
   }
@@ -2172,19 +2172,14 @@ section .map {
 
   .iglesia__titulo {
     line-height: 1.2em;
-    letter-spacing: 8px;
-    font-weight: 400;
+    font-weight: 600;
   }
 
   .iglesia__tituloPre {
     font-size: 18px;
   }
 
-  .iglesia__tituloSub {
-    font-size: 10px;
-    font-weight: 600;
-    letter-spacing: 15px;
-  }
+
 
   .iglesia__contenedor {
     align-items: center;
@@ -2267,23 +2262,22 @@ section .map {
   .galeria__grid {
     width: 100%;
     height: auto;
-    background: #34495e;
     display: grid;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     grid-template-areas:
-    "img1   img1    img1    img1"
-    "img2   img2    img2    img2"
-    "img3   img3    img3    img3"
-    "img4   img4    img4    img4"
-    "img5   img5    img5    img5"
-    "img6   img6    img6    img6"
-    "img7   img7    img7    img7"
-    "img8   img8    img8    img8";
+      "img1   img1    img1    img1"
+      "img2   img2    img2    img2"
+      "img3   img3    img3    img3"
+      "img4   img4    img4    img4"
+      "img5   img5    img5    img5"
+      "img6   img6    img6    img6"
+      "img7   img7    img7    img7"
+      "img8   img8    img8    img8";
     gap: .5em;
-     
+
 
   }
 
@@ -2339,6 +2333,12 @@ section .map {
   }
 
   /*footer*/
+  .footer {
+    margin: 0 auto;
+    text-align: center;
+    background-color: rgba(59, 64, 134, 1);
+
+  }
 
   /*Grupo1*/
   .footer__grupo1 {
