--- a/style.css
+++ b/style.css
@@ -702,17 +702,9 @@ aside[class=aside] {
   width: 100%;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 2px;
-  font-size: 16px;
-  line-height: 21px;
-  font-weight: 300;
-  margin-top: 2em;
-  text-align: justify;
-
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 2px;
   font-size: 14px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 300px;
   margin-top: 2em;
   text-align: left;
 }
@@ -776,7 +768,7 @@ aside[class=aside] {
 /*Precursores (Videos de Youtube*/
 .aside {
   width: 100%;
-  height: 80vh;
+  height: auto;
   grid-area: aside;
   display: flex;
   flex-wrap: wrap;
@@ -1897,6 +1889,32 @@ section .map {
   }
 
 
+  /* flecha abajo */
+  .flecha__abajo {
+    font-size: 50px;
+    position: absolute;
+    bottom: 70px;
+    cursor: pointer;
+    animation: flecha 1s ease-in-out infinite;
+  }
+
+  @keyframes flecha {
+    0% {
+      scale: 1;
+    }
+
+    50% {
+      scale: .6;
+    }
+
+    100% {
+      scale: 1;
+    }
+
+  }
+
+
+
   /* Nosotros */
   .dividida__left {
     grid-area: divLeft;
@@ -1967,8 +1985,9 @@ section .map {
     margin-bottom: 10px;
   }
 
-  .mision__parrafo{
-    line-height: normal;
+  .mision__parrafo {
+    line-height: 21px;
+    text-align: justify;
   }
 
   /*Banner*/
