--- a/style.css
+++ b/style.css
@@ -85,9 +85,31 @@ aside[class=aside] {
   width: 60px;
   height: auto;
   z-index: 99999;
-
+  animation: move 2s ease-in-out infinite;
 
 }
+
+@keyframes move {
+  0% {
+    scale: 1;
+  }
+
+  50% {
+    scale: .8;
+  }
+
+  100% {
+    scale: 1;
+  }
+
+}
+.loader__texto{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+ 
+
+}
+
 
 /* 
 .loader__texto {
@@ -339,7 +361,7 @@ aside[class=aside] {
   text-align: center;
   font-size: 30px;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 999;
   transition: all 300ms ease;
   cursor: pointer;
 }
@@ -366,7 +388,7 @@ aside[class=aside] {
   cursor: pointer;
   transform: translateX(300px);
   transition: .6s ease-in-out;
-  z-index: 2;
+  z-index: 999;
 }
 
 .btn__scrolltop--on {
@@ -445,6 +467,7 @@ aside[class=aside] {
   position: absolute;
   bottom: 70px;
   cursor: pointer;
+  z-index: 999;
   animation: flecha 1s ease-in-out infinite;
 }
 
@@ -1695,7 +1718,7 @@ section .map {
   }
 
   .loader__imagen {
-    width: 50px;
+    width: 80px;
     height: auto;
     z-index: 99999;
     margin-bottom: 50%;
@@ -1895,7 +1918,8 @@ section .map {
     position: absolute;
     bottom: 70px;
     cursor: pointer;
-    animation: flecha 1s ease-in-out infinite;
+    z-index: 999;
+    animation: flecha 1s ease-in infinite;
   }
 
   @keyframes flecha {
@@ -1938,6 +1962,14 @@ section .map {
     background-color: rgba(59, 64, 134, .7);
   }
 
+  .left__titulo--dos{
+    margin-top: 20px;
+  }
+
+  .left__parrafo--dos{
+    margin-bottom: 20px;
+  }
+
 
 
   .dividida__right {
@@ -1950,7 +1982,6 @@ section .map {
     display: grid;
     grid-template-columns: 1fr;
     overflow: hidden;
-
   }
 
   .right__textoDos {
@@ -1960,9 +1991,17 @@ section .map {
     padding: 20px;
     text-align: center;
     background-color: rgba(131, 26, 26, 0.541);
-
-
   }
+
+  .right__titulo--dos{
+    margin-top: 20px;
+  }
+
+  .right__parrafo--dos{
+    margin-bottom: 20px;
+  }
+
+
 
 
 
