--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ aside[class=aside] {
   height: auto;
   z-index: 99999;
   animation: move 2s ease-in-out infinite;
+  -webkit-animation: move 2s ease-in-out infinite;
 
 }
 
@@ -106,8 +107,7 @@ aside[class=aside] {
 .loader__texto{
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
- 
-
+  color: black;
 }
 
 
@@ -253,6 +253,7 @@ aside[class=aside] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
 }
 
 .main::before {
@@ -284,12 +285,11 @@ aside[class=aside] {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin: 55px auto;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
 }
 
 .main__tituloPre {
   font-size: 25px;
-  letter-spacing: 8px;
   font-family: 'Cardo', serif;
   font-weight: 100;
 }
@@ -297,7 +297,7 @@ aside[class=aside] {
 .main__tituloSub {
   font-size: 15px;
   font-weight: 400;
-  letter-spacing: 15px;
+  letter-spacing: 2px;
 }
 
 .main__tituloFondo {
@@ -464,11 +464,13 @@ aside[class=aside] {
 /* flecha abajo */
 .flecha__abajo {
   font-size: 70px;
+  color: black;
   position: absolute;
   bottom: 70px;
   cursor: pointer;
   z-index: 999;
   animation: flecha 1s ease-in-out infinite;
+  -webkit-animation: flecha 1s ease-in-out infinite;
 }
 
 @keyframes flecha {
@@ -727,9 +729,9 @@ aside[class=aside] {
   letter-spacing: 2px;
   font-size: 14px;
   font-weight: 400;
-  line-height: 300px;
+  line-height: 30px;
   margin-top: 2em;
-  text-align: left;
+  text-align: justify;
 }
 
 /*Banner*/
@@ -737,32 +739,34 @@ aside[class=aside] {
   width: 100%;
   height: auto;
   grid-area: banner;
-  backdrop-filter: blur(20px);
   position: relative;
   overflow: hidden;
+
+
 
 }
 
 .banner__grande {
   width: 200%;
-  height: 70vh;
+  height: auto;
   display: flex;
   flex-flow: row nowrap;
   transition: all 1s ease-in-out;
+
+ 
 
 
 }
 
 .banner--img {
   width: calc(100% /2);
-  padding: 1em;
+  padding: 0;
 
 }
 
 .banner__carrousel--puntos {
   width: 100%;
   height: 20%;
-  /* background-color: #c0392b; */
   position: absolute;
   left: 0;
   bottom: 0;
@@ -1041,7 +1045,7 @@ aside[class=aside] {
   display: grid;
   grid-template-columns: 280px;
   grid-template-rows: 210px 200px;
-  grid-template-areas: "image""text";
+  grid-template-areas: "image" "text";
   border-radius: 18px;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -1129,10 +1133,11 @@ aside[class=aside] {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/Alabanza2.jpg');
+  background: url('img/jovenes(nuevo).jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: center;
+  filter: contrast(1.2);
 }
 
 /*modificadores de matrimonios*/
@@ -1141,9 +1146,10 @@ aside[class=aside] {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/matrimonios.jpg');
+  background: url('img/matrimonios\(nuevo\).jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  filter: contrast(1.2) brightness(1.4);
 }
 
 
@@ -1153,7 +1159,7 @@ aside[class=aside] {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/Alabanza2.jpg');
+  background: url('img/abalanza\ \(mariano\).jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: center;
@@ -1164,10 +1170,10 @@ aside[class=aside] {
   grid-area: image;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-
-  background: url('img/alabanza3.jpg');
+  background: url('img/evangelismo.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  filter: contrast(1.8) brightness(.9);
 }
 
 
@@ -2034,7 +2040,6 @@ section .map {
     width: 100%;
     height: auto;
     grid-area: banner;
-    backdrop-filter: blur(20px);
     position: relative;
     overflow: hidden;
 
@@ -2052,7 +2057,7 @@ section .map {
 
   .banner--img {
     width: calc(100% /2);
-    padding: .5em;
+    padding: 1em;
 
   }
 
@@ -2243,13 +2248,17 @@ section .map {
     text-align: center;
   }
 
+ 
+
   .iglesia__texto {
     line-height: 8px;
+ 
   }
 
   .iglesia__titulo {
     line-height: 1.2em;
     font-weight: 600;
+
   }
 
   .iglesia__tituloPre {
