--- a/style.css
+++ b/style.css
@@ -671,12 +671,12 @@ aside[class=aside] {
   grid-area: mision;
   position: relative;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-around;
   padding: 3em;
   gap: 1em;
-  background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgba(182, 241, 171, 1) 99.3%);
+  background-color: rgba(59, 64, 134, 1);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -686,7 +686,6 @@ aside[class=aside] {
 
 .mision::before {
   width: 100%;
-
   content: '';
   position: absolute;
   top: 0;
@@ -698,10 +697,11 @@ aside[class=aside] {
 }
 
 .mision__texto {
-  width: 100%;
+  width: 50%;
   color: white;
   z-index: 1;
-  text-align: center;
+  text-align: left;
+
 }
 
 .mision__tituloPre {
@@ -735,12 +735,15 @@ aside[class=aside] {
   text-align: justify;
 }
 
-.mision__img {
+.mision__imagen{
   width: 600px;
-  float: left;
-  margin-top: 36px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  z-index: 9;
+}
+
+.mision__imagen img{
+  margin-bottom: 50px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 /*Banner*/
@@ -2029,6 +2032,7 @@ section .map {
   }
 
   .mision__texto {
+    width: 100%;
     padding: 0px 0 20px 0;
     color: white;
     text-align: center;
@@ -2042,6 +2046,20 @@ section .map {
   .mision__parrafo {
     line-height: 21px;
     text-align: justify;
+  }
+
+  .mision__imagen{
+    width: 400px;
+    z-index: 9;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 2em;
+  
+  }
+  
+  .mision__imagen img{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+   
   }
 
   /*Banner*/
