--- a/style.css
+++ b/style.css
@@ -837,7 +837,7 @@ aside[class=aside] {
 
 .aside__texto {
   width: 30%;
-  height: auto;
+  height: 50%;
   text-align: center;
   color: white;
   z-index: 1;
@@ -849,10 +849,15 @@ aside[class=aside] {
   margin: 0 auto;
   overflow: hidden;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .aside__titulo {
-  font-size: 20px;
+  font-size: 40px;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
@@ -882,7 +887,7 @@ aside[class=aside] {
 
 .aside__texto2 {
   width: 30%;
-  height: auto;
+  height: 50%;
   text-align: center;
   color: white;
   z-index: 1;
@@ -894,10 +899,15 @@ aside[class=aside] {
   margin: 0 auto;
   overflow: hidden;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .aside__titulo2 {
-  font-size: 20px;
+  font-size: 40px;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
@@ -932,7 +942,7 @@ aside[class=aside] {
 
 .aside__texto3 {
   width: 30%;
-  height: auto;
+  height: 50%;
   text-align: center;
   color: white;
   z-index: 1;
@@ -944,10 +954,15 @@ aside[class=aside] {
   margin: 0 auto;
   overflow: hidden;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .aside__titulo3 {
-  font-size: 20px;
+  font-size: 40px;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
@@ -965,7 +980,7 @@ aside[class=aside] {
   background-color: var(--color-uno);
   border-radius: 8px;
   padding: 8px;
-  margin: 0 auto;
+  margin: 10px auto;
 
   cursor: pointer;
 }
