--- a/style.css
+++ b/style.css
@@ -195,6 +195,8 @@ aside[class=aside] {
   z-index: 999;
   box-shadow: rgba(0, 0, 0, 0.20) 0px 5px 15px;
 
+  transition: top 0.5s;
+
 }
 
 /*Logo*/
@@ -676,7 +678,7 @@ aside[class=aside] {
   justify-content: space-between;
   padding: 3em;
   gap: 1em;
-  background-color: rgba(59, 64, 134, 1);
+  background-color: white;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -692,13 +694,13 @@ aside[class=aside] {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .6);
+  /* background-color: rgba(0, 0, 0, .6); */
   z-index: 0;
 }
 
 .mision__texto {
   width: 50%;
-  color: white;
+  color: black;
   z-index: 1;
   text-align: left;
 
@@ -736,16 +738,16 @@ aside[class=aside] {
 }
 
 .mision__imagen{
-  width: 400px;
+  width: 600px;
   z-index: 9;
-  
+  position: relative;
 }
 
 .mision__imagen img{
   margin-bottom: 50px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  
 }
+
+
 
 /*Banner*/
 .banner {
@@ -2050,7 +2052,7 @@ section .map {
   .mision__texto {
     width: 100%;
     padding: 0px 0 20px 0;
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 50px auto;
   }
@@ -2065,20 +2067,17 @@ section .map {
   }
 
   .mision__imagen{
-    width: 300px;
+    width: 600px;
     z-index: 9;
     margin: 0 auto;
     overflow: hidden;
-    padding: .5em;
-    margin: 0 auto;
- 
   
-  }
-  
-  .mision__imagen img{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     
+
+   
   }
+  
+
 
   /*Banner*/
   .banner {
