--- a/style.css
+++ b/style.css
@@ -90,6 +90,18 @@ aside[class=aside] {
 
 }
 
+.loader__texto {
+  display: block;
+  color: black;
+  font-family: monospace;
+  font-size: 8px;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 30ch;
+  animation: typing 2s steps(12), blink .5s infinite step-end alternate;
+  overflow: hidden;
+}
+
 @keyframes move {
   0% {
     scale: 1;
@@ -112,7 +124,6 @@ aside[class=aside] {
 }
 
 
-/* 
 .loader__texto {
   display: block;
   color: black;
@@ -136,7 +147,7 @@ aside[class=aside] {
   50% {
     border-color: transparent
   }
-} */
+}
 
 
 /*header*/
@@ -1744,39 +1755,7 @@ section .map {
 
   /*Louder*/
 
-  .loader__contenedor {
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99999;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-  }
 
-  .loader__imagen {
-    width: 80px;
-    height: auto;
-    z-index: 99999;
-    margin-bottom: 50%;
-  }
-
-  /* .loader__texto {
-      display: block;
-      color: black;
-      font-family: monospace;
-      font-size: 8px;
-      white-space: nowrap;
-      border-right: 4px solid;
-      width: 30ch;
-      animation: typing 2s steps(12), blink .5s infinite step-end alternate;
-      overflow: hidden;
-  } */
 
   .contenedor {
     width: 95vw;
