--- a/style.css
+++ b/style.css
@@ -2267,13 +2267,14 @@ section .map {
 
   .swiper {
     width: 100%;
-    height: 100%;
+    height: 60vh;
     grid-area: testimonios;
     background: #0df053;
   }
 
   .swiper-slide {
-  
+    width: 100%;
+    height: 90vh;
     text-align: center;
     font-size: 18px;
     background: rgb(149, 23, 23);
@@ -2295,37 +2296,48 @@ section .map {
   
 
   .swiper-texto{
-    width: 60%;
-    height: 100%;
+    width: 75%;
+    height: 50vh;
     padding: 10px;
-    background: whitesmoke;
+    background: rgb(123, 203, 162);
     color: black;
     font-size: 18px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-radius: 20px;
   }
 
   .swiper-texto h2{
     font-size: 25px;
-    margin-top: 30px;
+    margin-top: 5px;
+ 
   }
 
   .swiper-texto p{
+    width: 90%;
+    margin: 10px auto;
     font-size: 12px;
     margin-top: 10px;
+    text-align: justify;
+    
   }
 
   .swiper-avatar{
     border-radius: 50%;
-    position: absolute;
-    top: 10px;
+    padding: 10px;
+   
+  
   }
 
   .swiper-avatar img{
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
+
     object-fit: cover;
+    border: 2px solid white;
     border-radius: 50%;
+    margin: 0 auto;
   }
 
 
