--- a/style.css
+++ b/style.css
@@ -2269,7 +2269,22 @@ section .map {
     width: 100%;
     height: 60vh;
     grid-area: testimonios;
-    background: #0df053;
+    /* background: #0df053; */
+    background: url(img/rain.png);
+    background-size: cover;
+  }
+  .swiper::before {
+    width: 100%;
+    height: 100vh;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background-color: rgba(0, 0, 0, .5); */
+    background-color: rgba(59, 64, 134, .7);
+    z-index: 0;
   }
 
   .swiper-slide {
@@ -2277,7 +2292,8 @@ section .map {
     height: 90vh;
     text-align: center;
     font-size: 18px;
-    background: rgb(149, 23, 23);
+    /* background: rgb(149, 23, 23); */
+    background: none;
     position: relative;
     /* Center slide text vertically */
     display: -webkit-box;
@@ -2299,17 +2315,22 @@ section .map {
     width: 75%;
     height: 50vh;
     padding: 10px;
-    background: rgb(123, 203, 162);
-    color: black;
+    background: rgba(255, 255, 255, 0.30);
+    box-shadow: 0 8px 32px 0 rgba(31,38, 135, 0.37);
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    color: white;
     font-size: 18px;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
     border-radius: 20px;
+    line-height: 22px;
   }
 
   .swiper-texto h2{
     font-size: 25px;
+    font-weight: 600;
     margin-top: 5px;
  
   }
@@ -2339,6 +2360,7 @@ section .map {
     border-radius: 50%;
     margin: 0 auto;
   }
+
 
 
 
